--- a/homenet-sections.html
+++ b/homenet-sections.html
@@ -160,6 +160,11 @@
                                        <img src="http://via.placeholder.com/1920x1280" alt="" class="img-fluid">
                                    </a>
                                </div>
+                               <div class="swiper-slide">
+                                   <a href="http://via.placeholder.com/1920x1280" class="image-item" class="item-wrapper" >
+                                       <img src="http://via.placeholder.com/1920x1280" alt="" class="img-fluid">
+                                   </a>
+                               </div>
                            </div>
                            <div class="swiper-button-prev-portfolio"><i class="fa fa-angle-left"></i></div>
                            <div class="swiper-button-next-portfolio"><i class="fa fa-angle-right"></i></div>
@@ -182,7 +187,7 @@
                             data-aos-anchor-placement="top-bottom"
                             data-aos-easing="ease-in-out"
                             data-aos-duration="600">
-                           <div class="swiper-wrapper popup-gallery">
+                           <div class="swiper-wrapper">
                                <div class="swiper-slide">
                                    <a href="#" class="item-wrapper" >
                                        <img src="http://via.placeholder.com/1920x1280" alt="" class="img-fluid">
