--- a/info-page.html
+++ b/info-page.html
@@ -9,11 +9,13 @@
     <title>Homenet Info Page - Elements</title>
 
     <!-- Google Fonts -->
-    <link rel="dns-prefetch" href="//fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
-    <link href="https://fonts.googleapis.com/css?family=Muli:300,400,500,600,700|Montserrat:300,400,500,600,700" rel="stylesheet">
-    <!-- Chinese Google Font load for zh only -->
-    <link href="https://fonts.googleapis.com/css?family=Noto+Serif+SC:300,400,500,700" rel="stylesheet">
+    <link rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin />
+    <link rel="preload"
+      as="style"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Muli:wght@200;300;400;500;600;700&display=swap" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Muli:wght@200;300;400;500;600;700&display=swap" media="print" onload="this.media='all'">
     <!-- Homenet CSS -->
     <link rel="stylesheet" href="assets/css/rentall-bootstrap.css">
     <link rel="stylesheet" href="assets/css/homenet-bootstrap4.css">
