--- a/info-page.html
+++ b/info-page.html
@@ -14,8 +14,8 @@
       crossorigin />
     <link rel="preload"
       as="style"
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Muli:wght@200;300;400;500;600;700&display=swap" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Muli:wght@200;300;400;500;600;700&display=swap" media="print" onload="this.media='all'">
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Muli:wght@200;300;400;500;600;700" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Muli:wght@200;300;400;500;600;700" media="print" onload="this.media='all'">
     <!-- Homenet CSS -->
     <link rel="stylesheet" href="assets/css/rentall-bootstrap.css">
     <link rel="stylesheet" href="assets/css/homenet-bootstrap4.css">
