--- a/homenet-sections.html
+++ b/homenet-sections.html
@@ -16,6 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Muli:wght@200;300;400;500;600;700&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Muli:wght@200;300;400;500;600;700&display=swap" media="print" onload="this.media='all'">
     <link rel="stylesheet" href="assets/css/rentall-bootstrap.css">
+    <link rel="stylesheet" href="assets/css/rentall-bootstrap-only.css">
     <!-- Homenet CSS -->
     <link rel="stylesheet" href="assets/css/homenet-bootstrap4.css">
     <!-- Font Awesome CSS -->
