--- a/homenet-sections.html
+++ b/homenet-sections.html
@@ -1269,7 +1269,7 @@
         </section>
     </div>
     <!-- jQuery -->
-    <script src="assets/js/vendor/jquery-3.3.1.min.js"></script>
+    <script src="assets/js/jquery-3.5.1.min.js"></script>
     <!-- AOS -->
     <script src="assets/js/aos.js"></script>
     <!-- Parallax -->
