--- a/homenet-sections.html
+++ b/homenet-sections.html
@@ -780,19 +780,19 @@
                 <div class="d-flex justify-content-center">
                     <div class="social-wrapper d-flex" data-aos="flip-down" data-aos-delay="100" data-aos-anchor=".map-section " data-aos-easing="ease-in-out" data-aos-duration="800">
                         <a class="social-box facebook-h" href="#">
-                            <i class="fab fa-facebook-f"></i>
+                            <div class="facebook-white"></div>
                         </a>
                         <a class="social-box instagram-h" href="#">
-                            <i class="fab fa-instagram"></i>
+                            <div class="instagram-white"></div>
                         </a>
                         <a class="social-box twitter-h" href="#">
-                            <i class="fab fa-twitter"></i>
+                            <div class="twitter-white"></div>
                         </a>
                         <a class="social-box linkedin-h" href="#">
-                            <i class="fab fa-linkedin-in"></i>
+                            <div class="linkedin-white"></div>
                         </a>
-                        <a class="social-box google-plus-h" href="#">
-                            <i class="fab fa-google-plus-g"></i>
+                        <a class="social-box whatsapp-h" href="#">
+                            <div class="whatsapp-white"></div>
                         </a>
                     </div>
                 </div>
