--- a/template-homenet-design-complete-buttons.html
+++ b/template-homenet-design-complete-buttons.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="assets/favicon.ico">
     <title>Homenet Design - Buttons Completed</title>
     <!-- Homenet CSS -->
-    <link rel="stylesheet" href="assets/css/homenet.css">
+    <link rel="stylesheet" href="assets/css/homenet-design-px.css">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Muli:300,400,500,600,700|Montserrat:300,400,500,600,700" rel="stylesheet">
     <!-- Chinese Google Font load for zh only -->
