--- a/homenet-global-styles.html
+++ b/homenet-global-styles.html
@@ -19,20 +19,20 @@
 
 <body class="en">
 
-        <div style="font-size: 40px; color: #5c7073; font-weight: bold;">
+        <div style="font-size: 40px; color: #5c7073; font-weight: 700; margin: 20px 0; text-decoration: underline;">
             Global font styles - 2 Font families and Chinese
         </div>
 
 THis is the "primary" font style for <body> and replace the TripFinder global css for html, html a, h1, h2, h3, h4, h5, h6, a, p, li, dl, th, dt, input, textarea, span, div.
 
- <div class="section-title-2 font-weight-800 text-uppercase text-center pt-5" style="font-size: 40px;color: #fd5721;">
+ <div class="section-title-2 font-weight-800 text-uppercase text-center pt-5" style="font-size: 40px;color: #fd5721; font-weight: 700; margin: 20px 0; text-decoration: underline;">
             Reference for Styles + Element Sizes + Background Colors
         </div>
         <!-- Homepage -->
         <div class="section home-page">
             <div class="container">
                 <div class="py-5">
-                    <div class="section-title-1 font-weight-800 text-uppercase" style="font-size: 40px; color: #5c7073;">
+                    <div class="section-title-1 font-weight-800 text-uppercase" style="font-size: 40px; color: #5c7073; font-weight: 700; margin: 20px 0; text-decoration: underline;">
                         Home Page
                     </div>
                     <div class="mb-5">
@@ -81,7 +81,7 @@ THis is the "primary" font style for <body> and replace the TripFinder global cs
         <div class="divider-3 mb-5"></div>
         <!-- Listing Page -->
         <div class="section listing-page">
-            <div class="section-title-1 font-weight-800 text-uppercase" style="font-size: 40px; color: #5c7073;">
+            <div class="section-title-1 font-weight-800 text-uppercase" style="font-size: 40px; color: #5c7073; font-weight: 700; margin: 20px 0; text-decoration: underline;">
                 Listing Page
             </div>
             <div class="container">
@@ -131,7 +131,7 @@ THis is the "primary" font style for <body> and replace the TripFinder global cs
         <!-- Listing Page - Source Container -->
         <div class="section listing-page">
             <div class="container">
-                <div class="section-title-1 font-weight-800 text-uppercase" style="font-size: 40px; color: #5c7073;">
+                <div class="section-title-1 font-weight-800 text-uppercase" style="font-size: 40px; color: #5c7073; font-weight: 700; margin: 20px 0; text-decoration: underline;">
                     Listing Page - Source Container
                 </div>
                 <div class="mb-5">
@@ -158,7 +158,7 @@ THis is the "primary" font style for <body> and replace the TripFinder global cs
         <!-- Listing Page - Listing Page Similar & Featured Container -->
         <div class="section listing-page">
             <div class="container">
-                <div class="section-title-1 font-weight-800 text-uppercase" style="font-size: 40px; color: #5c7073;">
+                <div class="section-title-1 font-weight-800 text-uppercase" style="font-size: 40px; color: #5c7073; font-weight: 700; margin: 20px 0; text-decoration: underline;">
                     Similar & Featured Listing Card
                 </div>
                 <div class="mb-5">
@@ -199,7 +199,7 @@ THis is the "primary" font style for <body> and replace the TripFinder global cs
         </div>
         <div class="divider-3 mb-5"></div>
         <!-- Search Page -->
-        <div class="section-title-1 font-weight-800 text-uppercase" style="font-size: 40px; color: #5c7073;">
+        <div class="section-title-1 font-weight-800 text-uppercase" style="font-size: 40px; color: #5c7073; font-weight: 700; margin: 20px 0; text-decoration: underline;">
             Search Page
         </div>
         <div class="section search-page">
@@ -241,7 +241,7 @@ THis is the "primary" font style for <body> and replace the TripFinder global cs
         </div>
         <div class="divider-3 mb-5"></div>
         <!-- Map Listing Card -->
-        <div class="section-title-1 font-weight-800 text-uppercase" style="font-size: 40px; color: #5c7073;">
+        <div class="section-title-1 font-weight-800 text-uppercase" style="font-size: 40px; color: #5c7073; font-weight: 700; margin: 20px 0; text-decoration: underline;">
             Search Page Map Listing Card
         </div>
         <div class="section">
@@ -280,7 +280,7 @@ THis is the "primary" font style for <body> and replace the TripFinder global cs
         </div>
         <div class="divider-3 mb-5"></div>
         <!-- Profile Pages - Owner -->
-        <div class="section-title-1 font-weight-800 text-uppercase" style="font-size: 40px; color: #5c7073;">
+        <div class="section-title-1 font-weight-800 text-uppercase" style="font-size: 40px; color: #5c7073; font-weight: 700; margin: 20px 0; text-decoration: underline;">
             Profile Pages - Owner
         </div>
         <div class="section profile-page">
@@ -302,7 +302,7 @@ THis is the "primary" font style for <body> and replace the TripFinder global cs
         </div>
         <div class="divider-3 mb-5"></div>
         <!-- Profile Pages - Agent -->
-        <div class="section-title-1 font-weight-800 text-uppercase" style="font-size: 40px; color: #5c7073;">
+        <div class="section-title-1 font-weight-800 text-uppercase" style="font-size: 40px; color: #5c7073; font-weight: 700; margin: 20px 0; text-decoration: underline;">
             Profile Pages - Agent
         </div>
         <div class="section profile-page">
@@ -346,7 +346,7 @@ THis is the "primary" font style for <body> and replace the TripFinder global cs
 
         <div class="divider-3 mb-5"></div>
         <!-- Building Info Page -->
-        <div class="section-title-1 font-weight-800 text-uppercase" style="font-size: 40px; color: #5c7073;">
+        <div class="section-title-1 font-weight-800 text-uppercase" style="font-size: 40px; color: #5c7073; font-weight: 700; margin: 20px 0; text-decoration: underline;">
             Building Info Page
         </div>
         <div class="section building-page">
@@ -400,7 +400,7 @@ THis is the "primary" font style for <body> and replace the TripFinder global cs
         </div>
         <div class="divider-3 mb-5"></div>
         <!-- District Info Page -->
-        <div class="section-title-1 font-weight-800 text-uppercase" style="font-size: 40px; color: #5c7073;">
+        <div class="section-title-1 font-weight-800 text-uppercase" style="font-size: 40px; color: #5c7073; font-weight: 700; margin: 20px 0; text-decoration: underline;">
             District Info Page
         </div>
         <div class="section district-page">
@@ -453,7 +453,7 @@ THis is the "primary" font style for <body> and replace the TripFinder global cs
 
 
         <!-- Accounts - Profile & General -->
-        <div class="section-title-1 font-weight-800 text-uppercase" style="font-size: 40px; color: #5c7073; font-weight: bold;">
+        <div class="section-title-1 font-weight-800 text-uppercase" style="font-size: 40px; color: #5c7073; font-weight: 700; font-weight: bold;">
             Accounts - Profile & General
         </div>
         <div class="section account">
@@ -543,7 +543,7 @@ THis is the "primary" font style for <body> and replace the TripFinder global cs
 
 
         <!-- Accounts - Dashboard -->
-        <div class="section-title-1 font-weight-800 text-uppercase" style="font-size: 40px; color: #5c7073;">
+        <div class="section-title-1 font-weight-800 text-uppercase" style="font-size: 40px; color: #5c7073; font-weight: 700; margin: 20px 0; text-decoration: underline;">
             Accounts - Dashboard
         </div>
         <div class="section account">
@@ -611,7 +611,7 @@ THis is the "primary" font style for <body> and replace the TripFinder global cs
         </div>
         <div class="divider-3 mb-5"></div>
         <!-- Accounts - Listing Process -->
-        <div class="section-title-1 font-weight-800 text-uppercase" style="font-size: 40px; color: #5c7073;">
+        <div class="section-title-1 font-weight-800 text-uppercase" style="font-size: 40px; color: #5c7073; font-weight: 700; margin: 20px 0; text-decoration: underline;">
             Listing Process
         </div>
         <div class="section account">
@@ -710,7 +710,7 @@ THis is the "primary" font style for <body> and replace the TripFinder global cs
         </div>
         <div class="divider-3 mb-5"></div>
         <!-- Accounts - Listing Management -->
-        <div class="section-title-1 font-weight-800 text-uppercase" style="font-size: 40px; color: #5c7073;">
+        <div class="section-title-1 font-weight-800 text-uppercase" style="font-size: 40px; color: #5c7073; font-weight: 700; margin: 20px 0; text-decoration: underline;">
             Accounts - Listing Management
         </div>
         <div class="section account">
@@ -793,7 +793,7 @@ THis is the "primary" font style for <body> and replace the TripFinder global cs
         </div>
         <div class="divider-3 mb-5"></div>
         <!-- Accounts - chat -->
-        <div class="section-title-1 font-weight-800 text-uppercase" style="font-size: 40px; color: #5c7073;">
+        <div class="section-title-1 font-weight-800 text-uppercase" style="font-size: 40px; color: #5c7073; font-weight: 700; margin: 20px 0; text-decoration: underline;">
             Accounts - chat
         </div>
         <div class="section account">
@@ -910,7 +910,7 @@ THis is the "primary" font style for <body> and replace the TripFinder global cs
         </div>
         <div class="divider-3 mb-5"></div>
         <!-- Others -->
-        <div class="section-title-1 font-weight-800 text-uppercase" style="font-size: 40px; color: #5c7073;">
+        <div class="section-title-1 font-weight-800 text-uppercase" style="font-size: 40px; color: #5c7073; font-weight: 700; margin: 20px 0; text-decoration: underline;">
             Others
         </div>
         <div class="section others">
