--- a/listing-cards.html
+++ b/listing-cards.html
@@ -25,7 +25,7 @@
         <div class="demo-search-panel map">
             <!-- Listing Card -->
             <div class="listing-layout">
-                <div class="listing-card verified">
+                <div class="listing-card premium">
                     <div class="save"></div>
                     <div class="aspect-ratio">
                         <a class="listing-img" href="#" target="_blank" title="Wealthy Mansion">
@@ -39,7 +39,7 @@
                         </div>
                         <div class="row bs4 m-0 justify-content-between owner">
                             <h2 class="bdg-name bs4 col p-0"><a href="#" title="Wealthy Mansion">Wealthy Mansion</a></h2>
-                            <div class="source" title="Verified Owner">verified</div>
+                            <div class="source" title="Premium Owner">premium</div>
                         </div>
                         <div class="row bs4 m-0">
                             <div class="hood bs4 col-12">Star St Precinct . Wanchai . HK Island</div>
@@ -65,7 +65,7 @@
             </div>
             <!-- Listing Card -->
             <div class="listing-layout">
-                <div class="listing-card featured verified">
+                <div class="listing-card featured premium">
                     <div class="saved"></div>
                     <div class="aspect-ratio">
                         <a class="listing-img" href="#" target="_blank" title="Rich View Terrace">
@@ -82,7 +82,7 @@
                             <h2 class="bdg-name bs4 col p-0">
                                 <a href="#" title="Rich View Terrace">Rich View Terrace</a>
                             </h2>
-                            <div class="source" title="Verified Owner">verified</div>
+                            <div class="source" title="Premium Owner">premium</div>
                         </div>
                         <div class="row bs4 m-0">
                             <div class="hood bs4 col-12">Star St Precinct . Wanchai . HK Island</div>
@@ -237,7 +237,7 @@
             </div>
             <!-- Listing Card -->
             <div class="listing-layout">
-                <div class="listing-card verified">
+                <div class="listing-card premium">
                     <div class="save"></div>
                     <div class="aspect-ratio">
                         <a class="listing-img" href="#" target="_blank" title="Great George Building">
@@ -254,7 +254,7 @@
                             <h2 class="bdg-name bs4 col p-0">
                                 <a href="#" title="Great George Building">Great George Building</a>
                             </h2>
-                            <div class="source" title="Verified Owner">verified</div>
+                            <div class="source" title="Premium Owner">premium</div>
                         </div>
                         <div class="row bs4 m-0">
                             <div class="hood bs4 col-12">Tsim Sha Tsui . Kowloon</div>
