--- a/homenet-global-styles.html
+++ b/homenet-global-styles.html
@@ -223,7 +223,7 @@ THis is the "primary" font style for <body> and replace the TripFinder global cs
                     </div>
 
 
-<a href="https://wilzilla.github.io/homenet.github.io/navbar-footer-listingcards.html">SEE FULL UP TO DATE Property Cards HERE</a>
+<a href="https://wilzilla.github.io/homenet.github.io/listing-cards.html">SEE FULL UP TO DATE Property Cards HERE</a>
 
 <br>
 
