--- a/homenet-global-styles.html
+++ b/homenet-global-styles.html
@@ -23,7 +23,7 @@
             Global font styles - 2 Font families and Chinese
         </div>
 
-This is the "primary" font style for <body> and replaces the TripFinder global css for <body> and html, html a, h1, h2, h3, h4, h5, h6, a, p, li, dl, th, dt, input, textarea, span, div
+This is the "primary" font style for "body" and replaces the TripFinder global css for "body" and html, html a, h1, h2, h3, h4, h5, h6, a, p, li, dl, th, dt, input, textarea, span, div
 
  <div class="section-title-2 font-weight-800 text-uppercase text-center pt-5" style="font-size: 40px;color: #fd5721; font-weight: 700; margin: 20px 0; text-decoration: underline;">
             Reference for Styles + Element Sizes + Background Colors
