--- a/homenet-global-styles.html
+++ b/homenet-global-styles.html
@@ -10,11 +10,14 @@
     <!-- Homenet CSS -->
     <link rel="stylesheet" href="assets/css/homenet-global.css">
 
-
-    <!-- English Google Fonts load for en only -->
-    <link href="https://fonts.googleapis.com/css?family=Muli:300,400,500,600,700|Montserrat:300,400,500,600,700" rel="stylesheet">
-    <!-- Chinese Google Font load for zh only -->
-    <link href="https://fonts.googleapis.com/css?family=Noto+Serif+SC:300,400,500,700|Montserrat:300,400,500,600,700" rel="stylesheet">
+    <!-- Google Fonts -->
+    <link rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin />
+    <link rel="preload"
+      as="style"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Muli:wght@200;300;400;500;600;700" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Muli:wght@200;300;400;500;600;700" media="print" onload="this.media='all'">
 </head>
 
 <body class="en">
