--- a/info-page.html
+++ b/info-page.html
@@ -7,14 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" href="assets/favicon.ico">
     <title>Homenet Info Page - Elements</title>
-
     <!-- Google Fonts -->
-    <link rel="preconnect"
-      href="https://fonts.gstatic.com"
-      crossorigin />
-    <link rel="preload"
-      as="style"
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Muli:wght@200;300;400;500;600;700" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Muli:wght@200;300;400;500;600;700" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Muli:wght@200;300;400;500;600;700" media="print" onload="this.media='all'">
     <!-- Homenet CSS -->
     <link rel="stylesheet" href="assets/css/rentall-bootstrap-only.css">
@@ -22,16 +17,12 @@
     <link rel="stylesheet" href="assets/css/calculator.css">
     <link rel="stylesheet" href="assets/css/homenet-navbar.css">
     <link rel="stylesheet" href="assets/css/homenet-footer.css">
-
     <!-- Font Awesome CSS -->
     <link rel="stylesheet" href="assets/css/fontawesome-free/css/all.min.css">
     <!-- Page effects CSS -->
     <link rel="stylesheet" href="assets/css/aos.css">
     <!-- Swiper CSS -->
     <link rel="stylesheet" href="assets/css/swiper.min.css">
-
-
-
 </head>
 
 <body>
@@ -1081,30 +1072,26 @@
                                     </div>
                                 </div>
                             </div>
-
                             <!-- blockquote -->
                             <blockquote class="blockquote-text type1">
                                 <p>Quisque volutpat condimentum velit. Class aptent taciti sociosqu ad litora torquent per
                                     conubia nostra, per inceptos himenaeos. Nam nec ante. Sed lacinia, urna non tincidunt
                                     mattis, tortor neque adipiscing diam, a cursus ipsum ante quis turpis nulla facilisi.</p>
                             </blockquote>
-
                             <blockquote class="blockquote-text type2">
-                                             <svg xmlns="http://www.w3.org/2000/svg" height="40" viewBox="-8.5 -4.25 33 24" fill="#fff" class="quote">
-                                                    <path d="M5.94 6.3v13.44H-8.5V6.12C-8.5-3.1.78-4.25.78-4.25l1.24 2.7S-2.1-.98-2.93 2.1c-.83 2.3.82 4.22.82 4.22h8.05zm18.56 0v13.44H10.06V6.12c0-9.22 9.28-10.37 9.28-10.37l1.24 2.7s-4.13.58-4.95 3.65c-.83 2.3.82 4.22.82 4.22h8.05z" /></svg>
+                                <svg xmlns="http://www.w3.org/2000/svg" height="40" viewBox="-8.5 -4.25 33 24" fill="#fff" class="quote">
+                                    <path d="M5.94 6.3v13.44H-8.5V6.12C-8.5-3.1.78-4.25.78-4.25l1.24 2.7S-2.1-.98-2.93 2.1c-.83 2.3.82 4.22.82 4.22h8.05zm18.56 0v13.44H10.06V6.12c0-9.22 9.28-10.37 9.28-10.37l1.24 2.7s-4.13.58-4.95 3.65c-.83 2.3.82 4.22.82 4.22h8.05z" /></svg>
                                 <p>Quisque volutpat condimentum velit. Class aptent taciti sociosqu ad litora torquent per
                                     conubia nostra, per inceptos himenaeos. Nam nec ante. Sed lacinia, urna non tincidunt
                                     mattis, tortor neque adipiscing diam, a cursus ipsum ante quis turpis nulla facilisi.</p>
                             </blockquote>
-
                             <blockquote class="blockquote-text type2 left">
-                                             <svg xmlns="http://www.w3.org/2000/svg" height="40" viewBox="-8.5 -4.25 33 24" fill="#fff" class="quote">
-                                                    <path d="M5.94 6.3v13.44H-8.5V6.12C-8.5-3.1.78-4.25.78-4.25l1.24 2.7S-2.1-.98-2.93 2.1c-.83 2.3.82 4.22.82 4.22h8.05zm18.56 0v13.44H10.06V6.12c0-9.22 9.28-10.37 9.28-10.37l1.24 2.7s-4.13.58-4.95 3.65c-.83 2.3.82 4.22.82 4.22h8.05z" /></svg>
+                                <svg xmlns="http://www.w3.org/2000/svg" height="40" viewBox="-8.5 -4.25 33 24" fill="#fff" class="quote">
+                                    <path d="M5.94 6.3v13.44H-8.5V6.12C-8.5-3.1.78-4.25.78-4.25l1.24 2.7S-2.1-.98-2.93 2.1c-.83 2.3.82 4.22.82 4.22h8.05zm18.56 0v13.44H10.06V6.12c0-9.22 9.28-10.37 9.28-10.37l1.24 2.7s-4.13.58-4.95 3.65c-.83 2.3.82 4.22.82 4.22h8.05z" /></svg>
                                 <p>Quisque volutpat condimentum velit. Class aptent taciti sociosqu ad litora torquent per
                                     conubia nostra, per inceptos himenaeos. Nam nec ante. Sed lacinia, urna non tincidunt
                                     mattis, tortor neque adipiscing diam, a cursus ipsum ante quis turpis nulla facilisi.</p>
                             </blockquote>
-
                             <!-- Quote With html img background -->
                             <section class="content-background blockquote-img mood_overlay_gradient">
                                 <img src="https://picsum.photos/id/1065/666/888" alt="Listing Name Goes Here!">
@@ -1134,13 +1121,11 @@
                                     </div>
                                 </div>
                             </section>
-                            
                             <!-- Img background -->
                             <section class="content-background">
                                 <img src="https://picsum.photos/id/625/666/444" alt="Listing Name Goes Here!">
                             </section>
-
-                            <!-- Table -->         
+                            <!-- Table -->
                             <table class="table">
                                 <thead class="thead-dark">
                                     <tr>
@@ -1171,8 +1156,6 @@
                                     </tr>
                                 </tbody>
                             </table>
-
-
                         </div>
                     </div>
                 </div>
