--- a/homenet-global-styles.html
+++ b/homenet-global-styles.html
@@ -277,7 +277,7 @@
                 <h1>Premium Owner</h1><span class="since">Member since Jan 2018</span><br>
                 <span class="report">Report</span><br>
                 <h3>Languages</h3>
-                <p>English, Mandarin (Chinese) <span class="zh">官话</span>, Cantonese (Chinese) <span class="zh">廣東話</span></p><br>
+                <p>English, Mandarin (Chinese) <span lang="zh">官话</span>, Cantonese (Chinese) <span lang="zh">廣東話</span></p><br>
                 <span class="show">Show all</span><br>
                 <br>
                 <span class="veri_head">Verifications</span><br>
@@ -305,7 +305,7 @@
                 <h3>Experience</h3>
                 <p>+5 years Neighbourhood Expertise</p><br>
                 <h3>Languages</h3>
-                <p>English, Mandarin (Chinese) <span class="zh">官话</span>, Cantonese (Chinese) <span class="zh">廣東話</span></p><br>
+                <p>English, Mandarin (Chinese) <span lang="zh">官话</span>, Cantonese (Chinese) <span lang="zh">廣東話</span></p><br>
                 <h3>Profile</h3>
                 <p>Lando Calrissian made a name for himself as captain of the Millennium Falcon and a sportsman seeking a fortune at the galaxy’s sabacc tables. After he lost his beloved ship to Han Solo, he spent years living the high life and pursuing get-rich-quick schemes, with uneven results. He went semi-respectable as the administrator of Cloud City, only to be drawn into the fight against the Empire... <span class="more">READ MORE</span></p><br>
                 <span class="show">Show all</span><br>
@@ -898,7 +898,7 @@
                 <div class="agent_box">
                     <div class="content">
                         <span class="agent">AGENT</span> <span class="name">Lando Calrissian</span><br>
-                        <span class="lang">English, <span class="zh">官话</span>, <span class="zh">廣東話</span></span><br>
+                        <span class="lang">English, <span lang="zh">官话</span>, <span lang="zh">廣東話</span></span><br>
                         <br>
                         <div class="details">
                             <span class="neighbourhood">Mid Levels Central Specialist</span><br>
@@ -916,7 +916,7 @@
                 </div>
                 <div class="settings_box">
                     <div class="content">
-                        <span class="eng lang_select">ENG</span> <span class="zh">繁體</span> <span class="zh">簡体</span> <span class="cur_select">HKD$</span> <span>RMB¥</span>
+                        <span class="eng lang_select">ENG</span> <span lang="zh">繁體</span> <span lang="zh">簡体</span> <span class="cur_select">HKD$</span> <span>RMB¥</span>
                     </div>
                 </div>
                 <div class="popup_box">
