--- a/listing-banner-final-pciture.html
+++ b/listing-banner-final-pciture.html
@@ -3,11 +3,11 @@
 
 <head>
     <style>
-
     /* This is to remove Browser Styles - Delete this body style when applying styles */
     body {
         margin: 0px;
     }
+
     /*********************************************/
 
 
@@ -16,6 +16,7 @@
         width: 100%;
         overflow: hidden;
     }
+
     .listing-banner {
         display: -webkit-box;
         display: -ms-flexbox;
@@ -23,18 +24,22 @@
         -ms-flex-wrap: nowrap;
         flex-wrap: nowrap;
     }
+
     .center-banner {
         -webkit-box-pack: center !important;
         -ms-flex-pack: center !important;
         justify-content: center !important;
     }
+
     .main-img {
         margin-right: 1px;
         margin-left: 1px;
     }
+
     .b-left {
         margin-left: 1px;
     }
+
     .b-right {
         margin-right: 1px;
     }
@@ -42,7 +47,7 @@
     .img-frame {
         height: 100%;
     }
-    
+
     .main-img img {
         min-width: inherit;
         object-fit: cover;
@@ -50,34 +55,20 @@
         height: 100%;
         object-position: 50% 50%;
     }
+
+    .side-img img {
+        min-width: inherit;
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+        object-position: 50% 50%;
+    }
+
     .main-img {
         -webkit-box-flex: 0;
         -ms-flex: 0 0 100%;
         flex: 0 0 100%;
         max-width: 100%;
-    }
-
-    .side-img {
-        background-position: 50% 50%;
-        background-size: cover;
-    }
-
-    /* Load Responsive Background Images for sides */
-    @media (min-width: 580px) {
-        .side-img.image2 {
-            background-image: url('https://picsum.photos/id/101/592/888');
-        }
-        .side-img.image3 {
-            background-image: url('https://picsum.photos/id/1065/592/888');
-        }
-    }
-    @media (min-width: 992px) {
-        .side-img.image4 {
-            background-image: url('https://picsum.photos/id/1029/592/888');
-        }
-        .side-img.image5 {
-            background-image: url('https://picsum.photos/id/1067/592/888');
-        }
     }
 
     /* Responsive widths */
@@ -88,13 +79,14 @@
             flex: 0 0 100%;
             max-width: 100%;
         }
+
         .img-frame {
             max-height: 42vh;
             min-height: 40vh;
         }
-        .side-img.image2 , .side-img.image3, .side-img.image4, .side-img.image5 {
+
+        .side-img {
             display: none !important;
-            background-image: none !important;
         }
     }
 
@@ -104,125 +96,62 @@
             min-height: 450px
         }
     }
+
     @media (min-width: 580px) {
         .main-img {
-            -webkit-box-flex: 0;
-            -ms-flex: 0 0 auto;
             flex: 0 0 auto;
-            min-width: 500px;
+            min-width: 555px;
         }
         .side-img {
             -webkit-box-flex: 0;
             -ms-flex: 0 0 auto;
             flex: 0 0 auto;
-            min-width: 500px;
+            width: 555px;
+            overflow: hidden;
         }
     }
 
     /* Desktop 1080p Default Screens */
     @media (min-width: 992px) {
         .listing-banner-container {
-            width: 100%;
-            max-height: 606px;
-            overflow: hidden;
-        }
-        .listing-banner {
-            display: -webkit-box;
-            display: -ms-flexbox;
-            display: flex;
-            -ms-flex-wrap: nowrap;
-            flex-wrap: nowrap;
+            max-height: 625px;
         }
         .img-frame {
-            height: 606px;
+            height: 625px;
             max-height: inherit;
         }
-        .main-img {
-            -webkit-box-flex: 0;
-            -ms-flex: 0 0 auto;
-            flex: 0 0 auto;
+        .main-img,
+            {
             width: auto;
             max-width: none;
         }
-        .side-img {
-            -webkit-box-flex: 0;
-            -ms-flex: 0 0 500px;
-            flex: 0 0 500px;
-            max-width: 500px;
-        }
         .main-img img {
-            min-width: 500px;
-            object-fit: cover;
+            min-width: 555px;
             width: auto;
-            height: 100%;
         }
     }
-   
+
     /* Desktop 1080p and larger */
     @media (min-width: 1930px) {
         .listing-banner-container {
-            width: 100%;
             max-height: 60vh;
-            overflow: hidden;
         }
         .img-frame {
             height: 60vh;
             max-height: inherit;
         }
-        .main-img {
-            -webkit-box-flex: 0;
-            -ms-flex: 0 0 auto;
-            flex: 0 0 auto;
-            width: auto;
-            max-width: none;
+        .main-img img {
+            min-width: 600px;
+        }
+        .side-img img {
+            width: 100%;
         }
         .side-img {
-            -webkit-box-flex: 0;
-            -ms-flex: 0 0 605px;
-            flex: 0 0 605px;
-            max-width: 605px;
-            max-height: 60vh;
-        }
-        .main-img img {
-            min-width: 605px;
-            object-fit: cover;
-            width: 100%;
-            height: 100%;
+            width: 600px;
         }
     }
 
-    /* Desktop 1440p and larger */
-    @media (min-width: 2570px) {
-        .listing-banner-container {
-            width: 100%;
-            max-height: 65vh;
-            overflow: hidden;
-        }
-        .img-frame {
-            height: 65vh;
-            max-height: inherit;
-        }
-        .main-img {
-            -webkit-box-flex: 0;
-            -ms-flex: 0 0 44%;
-            flex: 0 0 44%;
-            width: 44%;
-            max-width: none;
-        }
-        .side-img {
-            -webkit-box-flex: 0;
-            -ms-flex: 0 0 16%;
-            flex: 0 0 16%;
-            max-width: 16%;
-            max-height: 65vh;
-        }
-        .main-img img {
-            min-width: 516px;
-            object-fit: cover;
-            width: 100%;
-            height: 100%;
-        }
-    }
+
 
     /* Mobile Devices */
     @media only screen and (max-device-width: 550px) and (-webkit-min-device-pixel-ratio: 2) {
@@ -236,11 +165,49 @@
             max-height: 42vh;
             min-height: 40vh;
         }
-        .side-img.image2 , .side-img.image3, .side-img.image4, .side-img.image5 {
+        .side-img {
             display: none !important;
             background-image: none !important;
         }
     }
+
+.listing-banner-container {
+
+    -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 1s; /* Firefox < 16 */
+        -ms-animation: fadein 1s; /* Internet Explorer */
+         -o-animation: fadein 1s; /* Opera < 12.1 */
+            animation: fadein 1s;
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
 
     </style>
 </head>
@@ -249,23 +216,42 @@
     <div class="listing-banner-container">
         <div class="listing-banner center-banner">
             <div class="b-left side-img image4">
-                <div class="img-frame"></div>
+                <div class="img-frame">
+                    <picture>
+                        <source media="(min-width:992px)" srcset="https://picsum.photos/id/1081/592/888" alt="Listing Name Goes Here!">
+                        <img src="assets/svg/listing_page/nothing.png">
+                    </picture>
+                </div>
             </div>
             <div class="b-left side-img image2">
-                <div class="img-frame"></div>
+                <div class="img-frame">
+                    <picture>
+                        <source media="(min-width:580px)" srcset="https://picsum.photos/id/1050/592/888" alt="Listing Name Goes Here!">
+                        <img src="assets/svg/listing_page/nothing.png">
+                    </picture>
+                </div>
             </div>
             <div class="main-img">
-                <div class="img-frame"><img src="https://picsum.photos/id/1068/1332/888" alt="Listing Name Goes Here!" /></div>
+                <div class="img-frame"><img src="https://picsum.photos/id/1068/1184/888" alt="Listing Name Goes Here!" /></div>
             </div>
             <div class="b-right side-img image3">
-                <div class="img-frame"></div>
+                <div class="img-frame">
+                    <picture>
+                        <source media="(min-width:580px)" srcset="https://picsum.photos/id/1050/1184/888">
+                        <img src="assets/svg/listing_page/nothing.png">
+                    </picture>
+                </div>
             </div>
             <div class="b-right side-img image5">
-                <div class="img-frame"></div>
+                <div class="img-frame">
+                    <picture>
+                        <source media="(min-width:992px)" srcset="https://picsum.photos/id/1081/592/888" alt="Listing Name Goes Here!">
+                        <img src="assets/svg/listing_page/nothing.png">
+                    </picture>
+                </div>
             </div>
         </div>
     </div>
-    <br>
 
 
     <br>
