--- a/listing-cards-ant.html
+++ b/listing-cards-ant.html
@@ -12,6 +12,10 @@
     <link rel="stylesheet" href="assets/css/rentall-common.css">
     <!-- Homenet CSS Common -->
     <link rel="stylesheet" href="assets/css/homenet-bootstrap4.css">
+
+    <!-- Ant design -->
+    <link rel="stylesheet" href="assets/css/ant/ant-design.css">
+    <link rel="stylesheet" href="assets/css/ant/ant-design-layout.css">
     <!-- Homenet CSS Components-->
     <link rel="stylesheet" href="assets/css/listing-cards.css">
     <!-- Google Fonts -->
@@ -51,7 +55,7 @@
                                     <div class="layout"><span class="bed">2</span><span class="bath">1</span>
                                     </div>
                                     <div class="size">
-                                        <span class="num">1,200</span>
+                                        <span class="num">120</span>
                                         <div class="ft">ft<span class="sq">²</span> net</div>
                                     </div>
                                 </div>
