--- a/listing-cards - Flex.html
+++ b/listing-cards - Flex.html
@@ -8,12 +8,11 @@
     <link rel="icon" href="assets/favicon.ico">
     <title>Homenet Listing Card</title>
     <!-- Existing Rentall CSS -->
-    <link rel="stylesheet" href="assets/css/rentall-bootstrap.css">
-    <link rel="stylesheet" href="assets/css/rentall-common.css">
+
     <!-- Homenet CSS Common -->
-    <link rel="stylesheet" href="assets/css/homenet-bootstrap4.css">
+    <link rel="stylesheet" href="assets/css/homenet-general-fml.css">
     <!-- Homenet CSS Components-->
-    <link rel="stylesheet" href="assets/css/listing-cards.css">
+    <link rel="stylesheet" href="assets/css/listing-cards-flex.css">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Muli:300,400,500,600,700|Montserrat:300,400,500,600,700" rel="stylesheet">
     <!-- Chinese Google Font load for zh only -->
@@ -29,8 +28,7 @@
                     <div class="save"></div>
                     <div class="aspect-ratio">
                         <a class="listing-img" href="#" target="_blank" title="Wealthy Mansion">
-                            <div class="special"></div>
-                            <img class="listing-img-top"src="demo/listings/1.jpg" alt="Wealthy Mansion">
+                            <img class="listing-img-top" src="demo/listings/1.jpg" alt="Wealthy Mansion">
                         </a>
                     </div>
                     <div class="listing-info">
@@ -38,8 +36,8 @@
                             <div class="rent">$22K<span class="per">/ mth</span>
                             </div>
                         </div>
-                        <div class="row bs4 m-0 justify-content-between owner">
-                            <h2 class="bdg-name bs4 col p-0"><a href="#" title="Wealthy Mansion">Wealthy Mansion</a></h2>
+                        <div class="flex top-row owner">
+                            <h2 class="bdg-name"><a href="#" title="Wealthy Mansion">Wealthy Mansion</a></h2>
                             <div class="source" title="Premium Owner">premium</div>
                         </div>
                         <div class="row bs4 m-0">
@@ -66,12 +64,11 @@
             </div>
             <!-- Listing Card -->
             <div class="listing-layout">
-                <div class="listing-card premium featured vr">
+                <div class="listing-card featured premium vr">
                     <div class="saved"></div>
                     <div class="aspect-ratio">
                         <a class="listing-img" href="#" target="_blank" title="Rich View Terrace">
-                            <div class="special"></div>
-                            <img class="listing-img-top"src="demo/listings/2c.jpg" alt="Rich View Terrace">
+                            <img class="listing-img-top" src="demo/listings/2c.jpg" alt="Rich View Terrace">
                         </a>
                     </div>
                     <div class="listing-info">
@@ -80,8 +77,8 @@
                                 <span class="cur">HKD</span>$22M
                             </div>
                         </div>
-                        <div class="row bs4 m-0 justify-content-between owner">
-                            <h2 class="bdg-name bs4 col p-0">
+                        <div class="flex top-row owner">
+                            <h2 class="bdg-name">
                                 <a href="#" title="Rich View Terrace">Rich View Terrace</a>
                             </h2>
                             <div class="source" title="Premium Owner">premium</div>
@@ -114,8 +111,7 @@
                     <div class="save"></div>
                     <div class="aspect-ratio">
                         <a class="listing-img" href="#" target="_blank" title="Kwong Sang Hong Grand Building Lodge">
-                            <div class="special"></div>
-                            <img class="listing-img-top"src="demo/listings/3.jpg" alt="Kwong Sang Hong Grand Building Lodge">
+                            <img class="listing-img-top" src="demo/listings/3.jpg" alt="Kwong Sang Hong Grand Building Lodge">
                         </a>
                     </div>
                     <div class="listing-info">
@@ -123,8 +119,8 @@
                             <div class="rent">$15K<span class="per">/ mth</span>
                             </div>
                         </div>
-                        <div class="row bs4 m-0 justify-content-between owner">
-                            <h2 class="bdg-name bs4 col p-0">
+                        <div class="flex top-row owner">
+                            <h2 class="bdg-name">
                                 <a href="#" title="Kwong Sang Hong Grand Building Lodge">Kwong Sang Hong Grand Building Lodge</a>
                             </h2>
                             <div class="source" title="Owner">owner</div>
@@ -159,8 +155,7 @@
                     <div class="save"></div>
                     <div class="aspect-ratio">
                         <a class="listing-img" href="#" target="_blank" title="Fortune Court Building">
-                            <div class="special"></div>
-                            <img class="listing-img-top"src="demo/listings/4.jpg" alt="Fortune Court Building">
+                            <img class="listing-img-top" src="demo/listings/4.jpg" alt="Fortune Court Building">
                         </a>
                     </div>
                     <div class="listing-info">
@@ -169,8 +164,8 @@
                                 <span class="cur">HKD</span>$2M
                             </div>
                         </div>
-                        <div class="row bs4 m-0 justify-content-between agent">
-                            <h2 class="bdg-name bs4 col p-0">
+                        <div class="flex top-row agent">
+                            <h2 class="bdg-name">
                                 <a href="#" title="Fortune Court Building">Fortune Court Building</a>
                             </h2>
                             <div class="source" title="Sole Agent">sole agent</div>
@@ -203,8 +198,7 @@
                     <div class="save"></div>
                     <div class="aspect-ratio">
                         <a class="listing-img" href="#" target="_blank" title="Luxury Building">
-                            <div class="special"></div>
-                            <img class="listing-img-top"src="demo/listings/5.jpg" alt="Luxury Building">
+                            <img class="listing-img-top" src="demo/listings/5.jpg" alt="Luxury Building">
                         </a>
                     </div>
                     <div class="listing-info">
@@ -212,8 +206,8 @@
                             <div class="rent">$8K<span class="per">/ mth</span>
                             </div>
                         </div>
-                        <div class="row bs4 m-0 justify-content-between owner">
-                            <h2 class="bdg-name bs4 col p-0">
+                        <div class="flex top-row owner">
+                            <h2 class="bdg-name">
                                 <a href="#" title="Luxury Building">Luxury Building</a>
                             </h2>
                             <div class="source" title="Owner">owner</div>
@@ -246,8 +240,7 @@
                     <div class="save"></div>
                     <div class="aspect-ratio">
                         <a class="listing-img" href="#" target="_blank" title="Great George Building">
-                            <div class="special"></div>
-                            <img class="listing-img-top"src="demo/listings/1.jpg" alt="Great George Building">
+                            <img class="listing-img-top" src="demo/listings/1.jpg" alt="Great George Building">
                         </a>
                     </div>
                     <div class="listing-info">
@@ -256,8 +249,8 @@
                                 <span class="cur">HKD</span>$22.5M
                             </div>
                         </div>
-                        <div class="row bs4 m-0 justify-content-between owner">
-                            <h2 class="bdg-name bs4 col p-0">
+                        <div class="flex top-row owner">
+                            <h2 class="bdg-name">
                                 <a href="#" title="Great George Building">Great George Building</a>
                             </h2>
                             <div class="source" title="Premium Owner">premium</div>
@@ -290,8 +283,7 @@
                     <div class="save"></div>
                     <div class="aspect-ratio">
                         <a class="listing-img" href="#" target="_blank" title="Richview Terrace">
-                            <div class="special"></div>
-                            <img class="listing-img-top"src="demo/listings/2.jpg" alt="Richview Terrace">
+                            <img class="listing-img-top" src="demo/listings/2.jpg" alt="Richview Terrace">
                         </a>
                     </div>
                     <div class="listing-info">
@@ -300,8 +292,8 @@
                                 <span class="cur">HKD</span>$13.5M
                             </div>
                         </div>
-                        <div class="row bs4 m-0 justify-content-between owner">
-                            <h2 class="bdg-name bs4 col p-0">
+                        <div class="flex top-row owner">
+                            <h2 class="bdg-name">
                                 <a href="#" title="Richview Terrace">Richview Terrace</a>
                             </h2>
                             <div class="source" title="Owner">owner</div>
@@ -334,8 +326,7 @@
                     <div class="save"></div>
                     <div class="aspect-ratio">
                         <a class="listing-img" href="#" target="_blank" title="21 Hoi Wan Street">
-                            <div class="special"></div>
-                            <img class="listing-img-top"src="demo/listings/3.jpg" alt="21 Hoi Wan Street">
+                            <img class="listing-img-top" src="demo/listings/3.jpg" alt="21 Hoi Wan Street">
                         </a>
                     </div>
                     <div class="listing-info">
@@ -343,8 +334,8 @@
                             <div class="rent">$162K<span class="per">/ mth</span>
                             </div>
                         </div>
-                        <div class="row bs4 m-0 justify-content-between agent">
-                            <h2 class="bdg-name bs4 col p-0">
+                        <div class="flex top-row agent">
+                            <h2 class="bdg-name">
                                 <a href="#" title="21 Hoi Wan Street">21 Hoi Wan Street</a>
                             </h2>
                             <div class="source" title="Agent">agent</div>
@@ -377,8 +368,7 @@
                     <div class="save"></div>
                     <div class="aspect-ratio">
                         <a class="listing-img" href="#" target="_blank" title="Hing Bong Mansion">
-                            <div class="special"></div>
-                            <img class="listing-img-top"src="demo/listings/5.jpg" alt="Hing Bong Mansion">
+                            <img class="listing-img-top" src="demo/listings/5.jpg" alt="Hing Bong Mansion">
                         </a>
                     </div>
                     <div class="listing-info">
@@ -386,8 +376,8 @@
                             <div class="rent">$22.25K<span class="per">/ mth</span>
                             </div>
                         </div>
-                        <div class="row bs4 m-0 justify-content-between owner">
-                            <h2 class="bdg-name bs4 col p-0">
+                        <div class="flex top-row owner">
+                            <h2 class="bdg-name">
                                 <a href="#" title="Hing Bong Mansion">Hing Bong Mansion</a>
                             </h2>
                             <div class="source" title="Owner">owner</div>
